# sg-draw

./: .gitignore  README.md  abstract_drawer.py  draw_from_json.py  pipeline.py  pipeline_depth.py  pipeline_position.py  pipeline_proportion.py  pipeline_scene_graph.py  pipeline_segmentation.py  pyproject.toml  scene_graph.json  scene_graph_extractor.py
.cursor/rules/: venv.mdc
analyzer/: pipeline_depth.py
analyzer/depth/: __init__.py  flow_field.py
depth/: __init__.py  drawer_contour.py  drawer_flow.py  extractor.py
drawer/: colors.js  effects.js  flow_field.js  index.html  sketch.js  streamline.js
position/: __init__.py  drawer.py  extractor.py
proportion/: __init__.py  drawer.py  extractor.py
references/: O1CN01WSiPVH1yfbVkeWuxM_!!4611686018427380782-0-rate.jpg_960x960.jpg_.avif
scene_graph/: __init__.py  drawer.py  extractor.py
segmentation/: __init__.py  drawer.py  drawer_dots.py  drawer_field.py  drawer_flower.py  extractor.py
